[package]
name = "demo-game"
version = "0.1.0"
authors = ["Roman Zaynetdinov <roman.zaynetdinov@lekane.com>"]

[dependencies]
bodyparser = "0.4.1"
iron = "0.4.0"
time = "0.1.0"
maud = { version = "0.14.*", features = ["iron"] }
maud_macros = "0.14.*"
rand = "0.3.*"
serde = "0.8.*"
serde_derive = "0.8.*"
serde_json = "0.8.*"
hyper = "0.9.*"

[lib]
name = "dummy"
path = "dummy.rs"
